--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  background-color:lightblue;
+  background-color:rgba(177, 207, 219, 0.493);
   padding: 0 20px;
 }
 
